fix(service):fix error from preference service
